Replace ReaderRegistry, and fix interplay between TemplateReader, FormatReader and other classes.