@@ -1,22 +1,49 @@
-package xyz.ottr.lutra;
+package xyz.ottr.lutra.io;
 
+/*-
+ * #%L
+ * lutra-core
+ * %%
+ * Copyright (C) 2018 - 2020 University of Oslo
+ * %%
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 2.1 of the
+ * License, or (at your option) any later version.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Lesser Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Lesser Public
+ * License along with this program.  If not, see
+ * <http://www.gnu.org/licenses/lgpl-2.1.html>.
+ * #L%
+ */
+
+import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 
-import xyz.ottr.lutra.io.InstanceReader;
-import xyz.ottr.lutra.io.InstanceWriter;
-import xyz.ottr.lutra.io.TemplateReader;
-import xyz.ottr.lutra.io.TemplateWriter;
+import xyz.ottr.lutra.result.Message;
+import xyz.ottr.lutra.result.MessageHandler;
+import xyz.ottr.lutra.result.Result;
 
 public class FormatManager {
 
-    public static final Set<FormatName> allowedInstanceReaderFormats = Collections.unmodifiableSet(legacy, wottr, stottr, tabottr, bottr);
-    public static final Set<FormatName> allowedInstanceWriterFormats = Collections.unmodifiableSet(wottr, stottr);
-    public static final Set<FormatName> allowedTemplateReaderFormats = Collections.unmodifiableSet(legacy, wottr, stottr);
-    public static final Set<FormatName> allowedTemplateWriterFormats = Collections.unmodifiableSet(wottr, stottr);
+    public static final Set<FormatName> allowedInstanceReaderFormats = Collections.unmodifiableSet(Set.of(
+            FormatName.legacy, FormatName.wottr, FormatName.stottr, FormatName.tabottr, FormatName.bottr));
+    public static final Set<FormatName> allowedInstanceWriterFormats = Collections.unmodifiableSet(Set.of(
+            FormatName.wottr, FormatName.stottr));
+    public static final Set<FormatName> allowedTemplateReaderFormats = Collections.unmodifiableSet(Set.of(
+            FormatName.legacy, FormatName.wottr, FormatName.stottr));
+    public static final Set<FormatName> allowedTemplateWriterFormats = Collections.unmodifiableSet(Set.of(
+            FormatName.wottr, FormatName.stottr));
 
     private final Map<FormatName, InstanceReader> instanceReaders;
     private final Map<FormatName, InstanceWriter> instanceWriters;
@@ -30,7 +57,8 @@ public class FormatManager {
         this.templateWriters = new HashMap<>();
     }
 
-    private static Optional<Message> registerFormatTo(FormatName name, T format, Map<FormatName, T> formats, Collection<FormatName> allowed, String operation) {
+    private static <T> Optional<Message> registerFormatTo(FormatName name, T format, Map<FormatName, T> formats,
+            Collection<FormatName> allowed, String operation) {
 
         if (!allowed.contains(name)) {
             return Optional.of(Message.error("Format " + name + " not allowed as " + operation + " format."));
@@ -77,26 +105,26 @@ public class FormatManager {
         return Collections.unmodifiableMap(this.templateWriters);
     }
 
-    public InstanceReader getInstanceReader(FormatName name) {
-        return this.instanceReaders.get(name);
+    public Result<InstanceReader> getInstanceReader(FormatName name) {
+        return Result.ofNullable(this.instanceReaders.get(name));
     }
 
-    public InstanceWriter getInstanceWriter(FormatName name) {
-        return this.instanceWriters.get(name);
+    public Result<InstanceWriter> getInstanceWriter(FormatName name) {
+        return Result.ofNullable(this.instanceWriters.get(name));
     }
 
-    public TemplateReader getTemplateReader(FormatName name) {
-        return this.templateReaders.get(name);
+    public Result<TemplateReader> getTemplateReader(FormatName name) {
+        return Result.ofNullable(this.templateReaders.get(name));
     }
 
-    public TemplateWriter getTemplateWriter(FormatName name) {
-        return this.templateWriters.get(name);
+    public Result<TemplateWriter> getTemplateWriter(FormatName name) {
+        return Result.ofNullable(this.templateWriters.get(name));
     }
 
-    private Result<Format> attemptAllFormats(Function<Format, MessageHandler> function, Map<FormatName, Format> formats) {
+    public Result<TemplateReader> attemptAllFormats(Function<TemplateReader, MessageHandler> readerFunction) {
         
-        Result<Format> unsuccessful = Result.empty(); // Return in case of no succeed
-        for (Map.Entry<String, Format> format : getAllTemplateReaders().entrySet()) {
+        Result<TemplateReader> unsuccessful = Result.empty(); // Return in case of no succeed
+        for (Map.Entry<FormatName, TemplateReader> reader : getTemplateReaders().entrySet()) {
             MessageHandler msgs = readerFunction.apply(reader.getValue());
 
             if (Message.moreSevere(msgs.getMostSevere(), Message.ERROR)) {
@@ -116,7 +144,7 @@ public class FormatManager {
         allMsgs.add(unsuccessful);
         Optional<Message> errors = allMsgs.toSingleMessage(
             "Attempts of parsing library on all available formats " 
-            + getAllTemplateReaders().keySet().toString() + " failed with following errors:\n");
+            + getTemplateReaders().keySet().toString() + " failed with following errors:\n");
 
         return errors.isPresent() ? Result.empty(errors.get()) : Result.empty();
     }
